exports[`no-useless-assertion > invalid(1): import assert from 'node:assert';\nassert.doesNotThrow(fn); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.doesNotThrow(fn);

`;

exports[`no-useless-assertion > invalid(1): import assert from 'node:assert';\nassert.doesNotThrow(fn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.doesNotThrow(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.doesNotThrow(fn); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.doesNotThrow(fn); });

`;

exports[`no-useless-assertion > invalid(10): import test from 'node:test';\ntest('t', t => { t.assert.doesNotThrow(fn); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.doesNotThrow(fn); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(11): import test from 'node:test';\ntest('t', t => { t.assert.doesNotReject(fn); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.doesNotReject(fn); });

`;

exports[`no-useless-assertion > invalid(11): import test from 'node:test';\ntest('t', t => { t.assert.doesNotReject(fn); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.doesNotReject(fn); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotReject()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(12): import assert from 'node:assert';\nassert.doesNotThrow(fn as () => void); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.doesNotThrow(fn as () => void);

`;

exports[`no-useless-assertion > invalid(12): import assert from 'node:assert';\nassert.doesNotThrow(fn as () => void); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.doesNotThrow(fn as () => void);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(13): import test from 'node:test';\ntest('t', t => { t.assert!.doesNotThrow(fn); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert!.doesNotThrow(fn); });

`;

exports[`no-useless-assertion > invalid(13): import test from 'node:test';\ntest('t', t => { t.assert!.doesNotThrow(fn); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert!.doesNotThrow(fn); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(2): import assert from 'node:assert';\nassert.doesNotThrow(() => compute()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.doesNotThrow(() => compute());

`;

exports[`no-useless-assertion > invalid(2): import assert from 'node:assert';\nassert.doesNotThrow(() => compute()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.doesNotThrow(() => compute());
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(3): import assert from 'node:assert';\nassert.doesNotThrow(fn, 'should not throw'); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.doesNotThrow(fn, 'should not throw');

`;

exports[`no-useless-assertion > invalid(3): import assert from 'node:assert';\nassert.doesNotThrow(fn, 'should not throw'); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.doesNotThrow(fn, 'should not throw');
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(4): import assert from 'node:assert';\nawait assert.doesNotReject(fn); 1`] = `

  1 | import assert from 'node:assert';
  2 | await assert.doesNotReject(fn);

`;

exports[`no-useless-assertion > invalid(4): import assert from 'node:assert';\nawait assert.doesNotReject(fn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | await assert.doesNotReject(fn);
    |       ^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotReject()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(5): import {doesNotThrow} from 'node:assert';\ndoesNotThrow(fn); 1`] = `

  1 | import {doesNotThrow} from 'node:assert';
  2 | doesNotThrow(fn);

`;

exports[`no-useless-assertion > invalid(5): import {doesNotThrow} from 'node:assert';\ndoesNotThrow(fn); 2`] = `

Message:
  1 | import {doesNotThrow} from 'node:assert';
> 2 | doesNotThrow(fn);
    | ^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(6): import {doesNotReject} from 'node:assert';\ndoesNotReject(fn); 1`] = `

  1 | import {doesNotReject} from 'node:assert';
  2 | doesNotReject(fn);

`;

exports[`no-useless-assertion > invalid(6): import {doesNotReject} from 'node:assert';\ndoesNotReject(fn); 2`] = `

Message:
  1 | import {doesNotReject} from 'node:assert';
> 2 | doesNotReject(fn);
    | ^^^^^^^^^^^^^^^^^ \`doesNotReject()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(7): import * as assert from 'node:assert';\nassert.doesNotThrow(fn); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.doesNotThrow(fn);

`;

exports[`no-useless-assertion > invalid(7): import * as assert from 'node:assert';\nassert.doesNotThrow(fn); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.doesNotThrow(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(8): import {strict as assert} from 'node:assert';\nassert.doesNotThrow(fn); 1`] = `

  1 | import {strict as assert} from 'node:assert';
  2 | assert.doesNotThrow(fn);

`;

exports[`no-useless-assertion > invalid(8): import {strict as assert} from 'node:assert';\nassert.doesNotThrow(fn); 2`] = `

Message:
  1 | import {strict as assert} from 'node:assert';
> 2 | assert.doesNotThrow(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;

exports[`no-useless-assertion > invalid(9): import assert from 'node:assert';\nassert.doesNotThrow?.(fn); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.doesNotThrow?.(fn);

`;

exports[`no-useless-assertion > invalid(9): import assert from 'node:assert';\nassert.doesNotThrow?.(fn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.doesNotThrow?.(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ \`doesNotThrow()\` is not useful. It catches an error only to rethrow it, so call the code directly instead.

`;
